# test-diagram-creator

./: .coverage  .env.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/: cicd-pipeline.md
frontend/: Dockerfile  index.html  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
scripts/: validate_build.py
src/agents/: __init__.py  agent_settings.py  architect.py  base.py  builder.py  coordinator.py  streaming.py
src/api/: security.py
src/core/: exceptions.py  models.py  settings.py
src/diagram/: engine.py  tool_registry.py
src/diagram/tools/: __init__.py  base_tool.py  cluster_tools.py  connection_tools.py  core_tools.py  node_tools.py
src/templates/: engine.py
src/validation/: framework.py  rules.py
tests/: test_environment.py
tests/agents/: test_architect.py  test_builder.py  test_integration.py
tests/api/: test_e2e.py  test_security.py
tests/core/: test_models.py
tests/diagram/: test_engine.py
tests/diagram/tools/: test_cluster_tools.py  test_connection_tools.py  test_core_tools.py  test_node_tools.py
tests/templates/: test_engine.py
tests/validation/: test_framework.py  test_rules.py
utils/: logging_config.py
