[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "test-diagram-creator"
version = "0.1.0"
description = "AI-powered diagram creator with agent-based architecture"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "SD Solutions", email = "info@sdsolutions.com"},
]
keywords = ["ai", "diagrams", "automation", "agents", "fastapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "diagrams>=0.24.4",
    "fastapi>=0.115.14",
    "google-generativeai>=0.8.5",
    "pillow>=11.2.1",
    "pydantic>=2.11.7",
    "pydantic-ai>=0.3.4",
    "pydantic-settings>=2.6.1",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.34.3",
    "logfire>=0.22.0",
    "opentelemetry-instrumentation-fastapi>=0.47b0",
    "structlog>=25.4.0",
    "slowapi>=0.1.9",
    "ruff>=0.12.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.5",
    "httpx>=0.28.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
diagram-creator = "src.main:main"

[project.urls]
Homepage = "https://github.com/mnproduction/test-diagram-creator"
Repository = "https://github.com/mnproduction/test-diagram-creator"
Issues = "https://github.com/mnproduction/test-diagram-creator/issues"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.setuptools.packages.find]
include = ["agents*", "tools*"]

[tool.ruff.lint]
# See https://docs.astral.sh/ruff/rules/
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.ruff.lint.per-file-ignores]
"*" = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
pythonpath = ["src"]
